# xv6-riscv-rs

./: .gdbinit  Cargo.toml  build.rs  linker.ld
.cargo/: config
src/: console.rs  file.rs  kalloc.rs  main.rs  memlayout.rs  param.rs  plic.rs  printf.rs  proc.rs  riscv.rs  spinlock.rs  start.rs  trap.rs  uart.rs  vm.rs
src/asm/: entry.S  kernelvec.S  swtch.S  trampoline.S
