[package]
name = "osdev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { git = "https://github.com/rust-lang-nursery/lazy-static.rs.git", features = ["spin_no_std"] }
once_cell = { version = "1.12.0", default-features = false }

[build-dependencies]
cc = "1.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = "debuginfo"
