[package]
name = "osdev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = "debuginfo"

[dependencies]
bitflags = "1.3.2"
once_cell = { version = "1.12.0", default-features = false }
